--- a/bundle/package.json
+++ b/bundle/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.24",
     "@material-ui/styles": "^4.3.3",
     "babel-loader": "^8.0.6",
     "prop-types": "^15.7.2",
